Enhance API responses and used separate DTOs for each flow